Disabled GSL debug compiling Added fp mode switches Made -lm mandatory for GNU (fixing failure to detect in vscode). Note that the reverse of this issue, linking lib.m when it isn't needed happens in VS with ninja. Failed to add mex support

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,24 +4,42 @@
 cmake_minimum_required (VERSION 3.7)
 
 
+option(GLM_TEST_ENABLE_FAST_MATH "Enable fast math optimizations" OFF)
+if(GLM_TEST_ENABLE_FAST_MATH)
+	if(NOT GLM_QUIET)
+		message(STATUS "GLM: Build with fast math optimizations")
+	endif()
+	if((CMAKE_CXX_COMPILER_ID MATCHES "Clang") OR (CMAKE_CXX_COMPILER_ID MATCHES "GNU"))
+		add_compile_options(-ffast-math)
+	elseif(CMAKE_CXX_COMPILER_ID MATCHES "MSVC")
+		add_compile_options(/fp:fast)
+	endif()
+else()
+	if(CMAKE_CXX_COMPILER_ID MATCHES "MSVC")
+		add_compile_options(/fp:precise)
+	endif()
+endif()
+
+
+
+option(HUNTER_STATUS_DEBUG "Print a lot of info" ON)
+option(HUNTER_CONFIGURATION_TYPES Release)
+option(CMAKE_CONFIGURATION_TYPES Release)
+
 
 include("cmake/HunterGate.cmake")
 HunterGate(
     URL "https://github.com/ruslo/hunter/archive/v0.23.131.tar.gz"
     SHA1 "0512ea6392065c8ece808296fddd7d8664d30920"
-	LOCAL #
+	LOCAL 
 )
 
 
 project(download-gsl)
-
-
 # download gtest
 hunter_add_package(GSL)
-
 # now gtest can be used
 find_package(GSL CONFIG REQUIRED)
-
 
 
 project ("IMT_CMAKE")
