--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,16 @@
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
 
+
+#CMAKE BUILD DIRS
+_builds/
+_build/
+build/
+builds/
+_*/
+CMakeSettings.json
+.vscode/
+
 # Build results
 [Dd]ebug/
 [Dd]ebugPublic/
