Added README detailing build instructions.
Still playing with mex from cmake...

--- a/IMT_CMAKE/CMakeLists.txt
+++ b/IMT_CMAKE/CMakeLists.txt
@@ -19,10 +19,10 @@ endif()
 
 message("\n\n\nHEYO DONE WITH THE LINKING-O\n\n\n")
 
-#find_package(Matlab)
-#matlab_add_mex(NAME IMT_MEX SRC "main.c" "main.h" "binned_conv.c" "binned_conv.h" "conv.c" "conv.h" "emgpdf.c" "emgpdf.h" "gp_max.c" "gp_max.h" "imt_analysis.c" "imt_analysis.h" "loglikelihood.c" "loglikelihood.h" "mexWrap.c" "nn_conv.c" "nn_conv.h" "onestage.c" "onestage.h" "onestagepdf_lag.c" "onestagepdf_lag.h" "onestagepdf_prime.c" "onestagepdf_prime.h" "tailmass.c" "tailmass.h" "threestage.c" "threestage.h" "twostage.c" "twostage.h" "utility.c" "utility.h" "window_conv.c" "window_conv.h" LINK_TO GSL::gsl R2018a)
-#target_link_libraries(IMT_MEX GSL::gsl)
-#set_target_properties(IMT_MEX PROPERTIES COMPILE_FLAGS "-fvisibility=default")
+find_package(Matlab)
+matlab_add_mex(NAME IMT_MEX SRC "main.c" "main.h" "binned_conv.c" "binned_conv.h" "conv.c" "conv.h" "emgpdf.c" "emgpdf.h" "gp_max.c" "gp_max.h" "imt_analysis.c" "imt_analysis.h" "loglikelihood.c" "loglikelihood.h" "mexWrap.c" "nn_conv.c" "nn_conv.h" "onestage.c" "onestage.h" "onestagepdf_lag.c" "onestagepdf_lag.h" "onestagepdf_prime.c" "onestagepdf_prime.h" "tailmass.c" "tailmass.h" "threestage.c" "threestage.h" "twostage.c" "twostage.h" "utility.c" "utility.h" "window_conv.c" "window_conv.h" LINK_TO GSL::gsl R2018a)
+target_link_libraries(IMT_MEX GSL::gsl)
+set_target_properties(IMT_MEX PROPERTIES COMPILE_FLAGS "-fvisibility=default")
 
 # TODO: Add tests and install targets if needed.
 
